--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
+    "ansi_up": "^6.0.2",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "numeral": "^2.0.6",
@@ -24,6 +25,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "autoprefixer": "^10.4.20",
     "eslint-plugin-vue": "^9.32.0",
+    "git-revision-vite-plugin": "^0.0.11",
     "postcss": "^8.4.49",
     "postcss-import": "^15.1.0",
     "prettier": "^3.4.2",
