--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: "./dist"
-          name: pages
+          name: frontend
