--- a/package.json
+++ b/package.json
@@ -5,34 +5,39 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "lint": "eslint \"{src,mock,build}/**/*.{vue,ts,tsx}\" --fix",
+    "format": "prettier --write src/",
+    "prepare": "husky"
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
-    "@sentry/vite-plugin": "^3.1.0",
-    "@sentry/vue": "^8.51.0",
-    "ansi_up": "^6.0.2",
-    "axios": "^1.7.9",
-    "chart.js": "^4.4.7",
-    "html-entities": "^2.5.2",
+    "@sentry/vite-plugin": "^3.3.1",
+    "@sentry/vue": "^8.55.0",
+    "ansi_up": "^6.0.5",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
+    "html-entities": "^2.6.0",
     "numeral": "^2.0.6",
-    "pinia": "^2.3.0",
+    "pinia": "^2.3.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toastification": "2.0.0-rc.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.10.5",
+    "@rushstack/eslint-patch": "^1.11.0",
     "@tailwindcss/forms": "^0.5.10",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/eslint-config-prettier": "^8.0.0",
-    "autoprefixer": "^10.4.20",
-    "eslint-plugin-vue": "^9.32.0",
+    "autoprefixer": "^10.4.21",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-vue": "^9.33.0",
     "git-revision-vite-plugin": "^0.0.11",
-    "postcss": "^8.4.49",
+    "husky": "^9.1.7",
+    "postcss": "^8.5.3",
     "postcss-import": "^15.1.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^4.5.6"
+    "typescript-eslint": "^8.30.1",
+    "vite": "^4.5.13"
   }
 }
