--- a/package.json
+++ b/package.json
@@ -1,43 +1,41 @@
 {
-  "name": "serein-web",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port 4173",
-    "lint": "eslint \"{src,mock,build}/**/*.{vue,ts,tsx}\" --fix",
-    "format": "prettier --write src/",
-    "prepare": "husky"
-  },
-  "dependencies": {
-    "@mdi/js": "^7.4.47",
-    "@sentry/vite-plugin": "^3.5.0",
-    "@sentry/vue": "^8.55.0",
-    "ansi_up": "^6.0.6",
-    "axios": "^1.9.0",
-    "chart.js": "^4.4.9",
-    "html-entities": "^2.6.0",
-    "numeral": "^2.0.6",
-    "pinia": "^2.3.1",
-    "vue": "^3.5.16",
-    "vue-router": "^4.5.1",
-    "vue-toastification": "2.0.0-rc.5"
-  },
-  "devDependencies": {
-    "@rushstack/eslint-patch": "^1.11.0",
-    "@tailwindcss/forms": "^0.5.10",
-    "@vitejs/plugin-vue": "^4.6.2",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "autoprefixer": "^10.4.21",
-    "eslint-plugin-prettier": "^5.4.1",
-    "eslint-plugin-vue": "^9.33.0",
-    "git-revision-vite-plugin": "^0.0.11",
-    "husky": "^9.1.7",
-    "postcss": "^8.5.4",
-    "postcss-import": "^15.1.0",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^3.4.17",
-    "typescript-eslint": "^8.33.0",
-    "vite": "^6.3.5"
-  }
+    "name": "serein-web",
+    "version": "1.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview --port 4173",
+        "lint": "eslint \"{src,mock,build}/**/*.{vue,ts,tsx}\" --fix",
+        "format": "prettier --write src/",
+        "prepare": "husky"
+    },
+    "dependencies": {
+        "@mdi/js": "^7.4.47",
+        "@rushstack/eslint-patch": "^1.11.0",
+        "@sentry/vite-plugin": "^3.5.0",
+        "@sentry/vue": "^8.55.0",
+        "@tailwindcss/forms": "^0.5.10",
+        "@vitejs/plugin-vue": "^4.6.2",
+        "@vue/eslint-config-prettier": "^8.0.0",
+        "ansi_up": "^6.0.6",
+        "autoprefixer": "^10.4.21",
+        "axios": "^1.9.0",
+        "chart.js": "^4.4.9",
+        "eslint-plugin-prettier": "^5.4.1",
+        "eslint-plugin-vue": "^9.33.0",
+        "git-revision-vite-plugin": "^0.0.11",
+        "html-entities": "^2.6.0",
+        "husky": "^9.1.7",
+        "numeral": "^2.0.6",
+        "pinia": "^2.3.1",
+        "postcss": "^8.5.4",
+        "postcss-import": "^15.1.0",
+        "prettier": "^3.5.3",
+        "vue": "^3.5.16",
+        "tailwindcss": "^3.4.17",
+        "typescript-eslint": "^8.33.0",
+        "vue-router": "^4.5.1",
+        "vite": "^5.0.0",
+        "vue-toastification": "2.0.0-rc.5"
+    }
 }
