--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "serein-web",
     "version": "1.0.0",
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
@@ -15,7 +16,8 @@
         "@sentry/vite-plugin": "^3.5.0",
         "@sentry/vue": "^8.55.0",
         "@tailwindcss/forms": "^0.5.10",
-        "@vitejs/plugin-vue": "^4.6.2",
+        "@tailwindcss/vite": "^4.1.10",
+        "@vitejs/plugin-vue": "^5.2.4",
         "@vue/eslint-config-prettier": "^8.0.0",
         "ansi_up": "^6.0.6",
         "autoprefixer": "^10.4.21",
@@ -27,15 +29,13 @@
         "html-entities": "^2.6.0",
         "husky": "^9.1.7",
         "numeral": "^2.0.6",
-        "pinia": "^2.3.1",
-        "postcss": "^8.5.4",
-        "postcss-import": "^15.1.0",
+        "pinia": "^3.0.3",
         "prettier": "^3.5.3",
+        "tailwindcss": "^4.1.10",
+        "typescript-eslint": "^8.34.0",
+        "vite": "^6.3.5",
         "vue": "^3.5.16",
-        "tailwindcss": "^3.4.17",
-        "typescript-eslint": "^8.33.0",
         "vue-router": "^4.5.1",
-        "vite": "^5.0.0",
         "vue-toastification": "2.0.0-rc.5"
     }
 }
