--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
+    "compilerOptions": {
+        "paths": {
+            "@/*": ["./src/*"]
+        },
+        "allowImportingTsExtensions": true,
+        "noEmit": true,
+        "lib": ["esnext", "dom"],
     },
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
-    "lib": ["esnext", "dom"],
-    "module": "NodeNext",
-  },
-  "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist"]
 }
